se escribio todos los String en el archivo strings.xml